test/integration/bad/new/bad_constrained_type_in_fn2.stan
functions{
  void foo(simplex x){
    print(x);
  }
}
